spring-boot-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-deplymint
spec:
  selector:
    matchLabels:
      app: spring-boot
  template:
    metadata:
      labels:
        app: spring-boot
    spec:
      containers:
      - name: app
        image: alielhabal70/spring-boot
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
