spring-service.yml
kind: Service
apiVersion: v1
metadata:
  name:  spring-service
spec:
  selector:
    app: spring-boot
  type: NodePort
  ports:
  - name: port
    port:  8080
    targetPort:  8080
